[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/record.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=8]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=9]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=2]

font/size = 120
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]

font/size = 80
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]

font/size = 80
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]

font/size = 80
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]

font/size = 80
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 9 )

[node name="Record" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Background" type="Sprite" parent="Control"]

transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]

transform/pos = Vector2( 889.382, 474.672 )
frames = SubResource( 1 )
animation = "default"
frame = 5
playing = true

[node name="GameOver" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1025.0
margin/bottom = 180.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.176471, 0.176471, 1 )
text = "Game Over"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScoreDescription" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 200.0
margin/right = 1025.0
margin/bottom = 320.0
custom_fonts/font = SubResource( 3 )
text = "High Score"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScoreName" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 330.0
margin/right = 1025.0
margin/bottom = 450.0
custom_fonts/font = SubResource( 4 )
text = "Name"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScoreValue" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 460.0
margin/right = 1025.0
margin/bottom = 580.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CurrentScoreName" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 840.0
margin/right = 1025.0
margin/bottom = 960.0
custom_fonts/font = SubResource( 6 )
text = "Name"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CurrentScoreValue" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 970.0
margin/right = 1025.0
margin/bottom = 1090.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayAgain" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 1166.0
margin/right = 987.0
margin/bottom = 1316.0
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Again"
flat = false

[node name="Menu" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 1356.0
margin/right = 987.0
margin/bottom = 1506.0
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false

[node name="ClearHistory" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 1536.0
margin/right = 987.0
margin/bottom = 1686.0
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Clear History"
flat = false

[connection signal="button_up" from="Control/PlayAgain" to="." method="_on_PlayAgain_button_up"]

[connection signal="button_up" from="Control/Menu" to="." method="_on_Menu_button_up"]

[connection signal="button_up" from="Control/ClearHistory" to="." method="_on_ClearHistory_button_up"]


